String#slice! should clear the coderange when truncating

[Bug #19739]

This bug was incidentally fixed in Ruby 3.2 via b0b9f72
but remains on 3.1 and older.

this patch is written by byroot, https://github.com/Shopify/ruby/commit/3b351ee62d4206bb72301c2e98dcb173f1e35be7

Co-authored-by: Jean Boussier <byroot@ruby-lang.org>